--- a/Ben/style.css
+++ b/Ben/style.css
@@ -50,20 +50,34 @@ html, body {
 }
 
 footer {
-    background-color: green;
-    
-    
+    background-color: #06A77D;
+    position: fixed;
+    bottom:0;
+    width: 100%;
+
 }
 footer > ul > li {
     display:inline-block;
     vertical-align:middle;
     
+   
 }
-.logo{
+.logofooter{
     width: 5em;
+    margin-top:0.7em;
 }
-.button{
+.right{
     float:right;
+    margin-top: 1.7em;
+    margin-right:2em;
+   
 }
+.button {
+	border:none;
+	background-color: #F3D34A;
+	padding: 1em;
+}
+
+
     
     
