--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header {
 
 
 /****************************   MAIN    ***************************************/
-main{
+.main{
     overflow: scroll;
     width: 80vw;
     max-width: 1200px;
@@ -143,7 +143,7 @@ main{
     overflow: hidden;
     margin-top: 50px;
 }
-main div{
+.main div{
     border: 2px solid #F3D34A;
     text-align: center;
     width: 80%;
@@ -157,7 +157,7 @@ main div{
 }
 
 
-main img{
+.main img{
     width: 100%;
 }
 .description-text{
