commit before lunch

--- a/maksym/maksym.css
+++ b/maksym/maksym.css
@@ -43,12 +43,104 @@ a.active {
 }
 
 /* *************main********** */
+main {
+  margin-top: 125px;
+}
+
 .wrapper{
+  background-color: white;
   background-image: url('img/steps.jpg');
-  height: 1500px;
   background-size: 70% 100%;
   background-position: -300px;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  position: relative;
 }
 
+.wrapper::before {
+  content: '';
+  position: absolute;
+  z-index: -10;
+  height: 20px;
+  right: 0;
+	left: 0;
+	bottom: -10px;
+  background: lightsalmon;
+  border-radius: 0 0 12px 12px;
+}
+
+.wrapper::after {
+  content: '';
+  position: absolute;
+	z-index: -20;
+	height: 20px;
+	right: 20px;
+	left: 40px;
+	bottom: -20px;
+  right: 40px;
+	background: lightcoral;
+	border-radius: 0 0 12px 12px;
+}
+
+/* ******************PRESENTATION******************* */
+
+.presentaition__title {
+  font-size: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-family: sans-serif;
+  letter-spacing: 10px;
+  background: url('img/back_txt.jpg');
+  background-clip: text;
+  background-size: auto 50px;
+  color: transparent;
+  padding: 40px 0;
+}
+
+.maks__photo {
+  text-align: center;
+}
+
+.maks__photo img{
+  width: auto;
+  height: 400px;
+}
+
+.presentaition__text {
+  margin: 25px 40px;
+  font-size: 20px;
+  font-weight: 700;
+  color: brown;
+  text-align: center;
+  padding: 25px 20px;
+}
+
+/* *******************************MAN**************** */
+
+.sprite {
+  background: url('img/man.png');
+  height: 325px;
+  width:184px;
+  animation: start .7s steps(8) infinite;
+}
+
+@keyframes start {
+
+  100% {
+    background-position: -1472px;
+  }
+}
+
+.box__anim {
+  animation: move 10s linear infinite;
+}
+
+@keyframes move {
+  0%{
+    transform: translateX(-10%);
+  }
+  100%{
+    transform: translateX(100%);
+  }
+}
