--- a/CodeNaf/style.css
+++ b/CodeNaf/style.css
@@ -1,1 +1,52 @@
 @import url('../reset.css');
+@import url('../style.css');
+html{
+    scroll-behavior: smooth;
+}
+.naf-main{
+    min-height: 90vh;
+}
+.naf-main article {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
+
+.naf-main li{
+    padding: 10px;
+}
+.naf-main{
+    overflow: scroll;
+    width: 80vw;
+    max-width: 1200px;
+    margin: auto;
+    font-size: 1.5em;
+    overflow: hidden;
+    margin-top: 50px;
+}
+.naf-main li{
+    text-align: center;
+    width: 80%;
+    max-width: 700px;
+    margin: auto;
+    margin-bottom: 50vh;
+    padding: 3em;
+    border-radius: 20px;
+    background-color: rgba(250, 250, 250, 0.5);
+}
+.arrow{
+    position: fixed;
+}
+.arrow-top{
+    top: 100px;
+}
+.arrow-bottom{
+    top: 900px;
+}
+
+.naf-main img{
+    width: 200px;
+}
+.naf-main .description-text{
+    padding: 20px 10px;
+}
